--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "organic-stem-core",
+  "name": "organic-stem-core-template",
   "version": "1.0.0",
   "bin": {
-    "organic-stem-core": "./index.js"
+    "organic-stem-core-template": "./index.js"
   },
   "dependencies": {
-    "organic-stem-stack-upgrade": "node-organic/organic-stem-stack-upgrade"
+    "organic-stack-upgrade": "github:node-organic/organic-stack-upgrade"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
@@ -14,5 +14,20 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1"
-  }
+  },
+  "description": "a stem core template",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/node-organic/organic-stem-core-template.git"
+  },
+  "author": "Boris Filipov",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/node-organic/organic-stem-core-template/issues"
+  },
+  "homepage": "https://github.com/node-organic/organic-stem-core-template#readme"
 }
