--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "organic-stem-core-template": "./index.js"
   },
   "dependencies": {
-    "organic-stack-upgrade": "github:node-organic/organic-stack-upgrade"
+    "organic-stack-upgrade": "node-organic/organic-stack-upgrade"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
@@ -13,12 +13,13 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "jest": "^22.4.2"
   },
   "description": "a stem core template",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,14 @@
   "bugs": {
     "url": "https://github.com/node-organic/organic-stem-core-template/issues"
   },
-  "homepage": "https://github.com/node-organic/organic-stem-core-template#readme"
+  "homepage": "https://github.com/node-organic/organic-stem-core-template#readme",
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/seed/"
+    ]
+  },
+  "stackUpgrades": {
+    "organic-stack-template": "1.0.0"
+  }
 }
