--- a/seed/package.json
+++ b/seed/package.json
@@ -1,7 +1,6 @@
 {
-  "stackUpgrades": {
-    "core": "1.0.0"
-  },
+  "name": "{{{project-name}}}",
+  "version": "1.0.0",
   "devDependencies": {
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
