--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "organic-stem-core-template": "./index.js"
   },
   "dependencies": {
-    "organic-stack-upgrade": "node-organic/organic-stack-upgrade"
+    "organic-stack-upgrade": "1.0.1"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
