--- a/seed/package.json
+++ b/seed/package.json
@@ -1,6 +1,11 @@
 {
   "name": "{{{project-name}}}",
   "version": "1.0.0",
+  "dependencies": {
+    "organic-angel": "^0.3.2",
+    "angelscripts-help": "0.2.0",
+    "angelscripts-monorepo": "node-organic/angelscripts-monorepo"
+  },
   "devDependencies": {
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
