--- a/seed/package.json
+++ b/seed/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "organic-angel": "^0.3.2",
-    "angelscripts-help": "0.2.0",
-    "angelscripts-monorepo": "node-organic/angelscripts-monorepo"
+    "angelscripts-help": "^0.2.0",
+    "angelscripts-monorepo": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
