--- a/seed/package.json
+++ b/seed/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "organic-angel": "^0.3.2",
     "angelscripts-help": "^0.2.0",
-    "angelscripts-monorepo": "^1.0.0"
+    "angelscripts-monorepo": "^1.1.1",
+    "angelabilities-package-scripts": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
